Add Pdf Creator and Major UI Addition

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">MiniProject</string>
     <string name="title_activity_register">RegisterActivity</string>
     <string name="title_activity_live_data">LiveDataActivity</string>
+    <string name="title_activity_doctor">DoctorActivity</string>
 </resources>
